[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "contextlite"
version = "0.1.0"
description = "Post-RAG context optimizer — filters, deduplicates, and packs retrieved chunks into a token budget. No LLM calls."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Vincent Guarnieri" }]
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0,<2.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30.0"]
api = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0"]

[project.scripts]
contextlite = "main:main"

[tool.setuptools.packages.find]
include = ["contextlite*"]
